--- a/tox.ini
+++ b/tox.ini
@@ -1,17 +1,17 @@
 [tox]
 min_version = 3.4
-env_list = py310, py311, py312, package
+env_list = py37, py38, py39, py310, py311, py312, package
 skip_missing_interpreters = true
 no_package = false
 
 [testenv]
 
-[testenv:py3{10,11,12}]
+[testenv:py3{7,8,9,10,11,12}]
 description = Run unit test, check for coverage, and check package config
 extras = test, config
 commands =
 	coverage run -m pytest
-	coverage report --fail-under=90
+	coverage report --fail-under=80
 	pyroma .
 
 [testenv:package]
