--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,12 +32,12 @@ requires-python = ">=3.7"
 dependencies = []
 
 [project.optional-dependencies]
-dev = ["pytest ~= 7.3.1", "coverage ~= 7.2.3", "pyroma ~= 4.2", "build ~= 0.10.0", "tox~=4.5.1"]
+dev = ["pytest ~= 7.3.1", "coverage ~= 7.2.3", "pyroma ~= 4.2", "build ~= 0.10.0", "tox ~= 4.5.1", "tox-extras >= 0.0.1"]
 test = ["pytest ~= 7.3.1", "coverage ~= 7.2.3"]
 config = ["pyroma ~= 4.2"]
 package = ["build ~= 0.10.0"]
 packagetest = ["twine ~= 4.0.2"]
-ci = ["tox~=4.5.1"]
+ci = ["tox ~= 4.5.1", "tox-extras >= 0.0.1"]
 publish = ["twine ~= 4.0.2"]
 
 [project.urls]
