Edited tox env for generating docs, updated README with tox commands

--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ env_list = main, py3{7,8,9,10,11}, awaitpy, config, package
 labels =
 	test = main
 	testall = main, py3{7,8,9,10,11}
+	docs = docs
 	config = config
 	package = package, packagetest
 	packagetest = packagetest
@@ -65,6 +66,14 @@ commands =
 description = Consolidate tests for different Python versions
 depends = main, py3{7,8,9,10,11}
 base = await
+
+[testenv:docs]
+description = Generate documentation
+depends = awaitpy
+base = task
+tox_extras = docs
+commands = pdoc gpath.py -o docs/html -t docs/templates --footer-text="GPath $(python -c 'from gpath import __version__ as v; print(v);')" --edit-url gpath='https://github.com/yushiyangk/GPath/blob/main/gpath.py'
+parallel_show_output = true
 
 [testenv:config]
 description = Check package config
