Added more tox commands to README, and added a simple favicon for the docs

--- a/tox.ini
+++ b/tox.ini
@@ -15,9 +15,9 @@ labels =
 	testall = main, py3{7,8,9,10,11}
 	docs = docs
 	config = config
-	package = package, packagetest
-	packagetest = packagetest
-	prepare = main, py3{7,8,9,10,11}, awaitpy, config, package, packagetest
+	package = package, testpackage
+	testpackage = testpackage
+	prepare = main, py3{7,8,9,10,11}, awaitpy, config, package, testpackage
 	clean = clean
 	testpublish = testpublish-noparallel
 	publish = publish-noparallel
@@ -93,7 +93,7 @@ commands_pre = rm -rf dist/ generic_path.egg-info/
 commands = python -m build
 commands_post = rm -rf generic_path.egg-info/
 
-[testenv:packagetest]
+[testenv:testpackage]
 description = Check packages
 depends = package
 base = task
