Fixed GitHub link and short type names for variables in pdoc

--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,7 @@ description = Generate documentation
 depends = awaitpy
 base = task
 tox_extras = docs
-commands = pdoc gpath.py -o docs/html -t docs/templates --footer-text="GPath $(python -c 'from gpath import __version__ as v; print(v);')" --edit-url gpath='https://github.com/yushiyangk/GPath/blob/main/gpath.py'
+commands = pdoc gpath.py -o docs/html -t docs/templates --footer-text="GPath $(python -c 'from gpath import __version__ as v; print(v);')" --edit-url gpath='https://github.com/yushiyangk/GPath/blob/main/gpath'
 parallel_show_output = true
 
 [testenv:config]
