Updated module description (gpath.py), PyPI package description (pyproject.toml), and project description (README.md); also updated GPath class docstring.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ dynamic = ["version", "readme"]
 authors = [
 	{name = "Yu Shiyang", email = "yu.shiyang@gnayihs.uy"}
 ]
-description = "GPath provides a robust, generalised abstract file path that provides functions for common path manipulations independent from the local operating system."
+description = "Generalised abstract file path that provides path manipulations independent from the local environment"
 license = {text = "MPL-2.0"}
 classifiers = [
 	"Development Status :: 3 - Alpha",
