--- a/tox.ini
+++ b/tox.ini
@@ -9,15 +9,15 @@ skip_missing_interpreters = true
 
 # env_list defines the default environments to run with tox's legacy command (`tox` or `tox -p`)
 
-env_list = main, py3{7,8,9,10,11}, awaitpy, config, package
+env_list = main, py3{7,8,9,10,11}, awaitpy, metadata, package
 labels =
 	test = main
 	testall = main, py3{7,8,9,10,11}
 	docs = docs
-	config = config
+	metadata = metadata
 	package = package, testpackage
 	testpackage = testpackage
-	prepare = main, py3{7,8,9,10,11}, awaitpy, config, package, testpackage
+	prepare = main, py3{7,8,9,10,11}, awaitpy, metadata, package, testpackage
 	clean = clean
 	testpublish = testpublish-noparallel
 	publish = publish-noparallel
@@ -75,11 +75,11 @@ tox_extras = docs
 commands = pdoc gpath.py -o docs/html -t docs/templates --footer-text="GPath $(python -c 'from gpath import __version__ as v; print(v);')" --favicon favicon.png --edit-url gpath='https://github.com/yushiyangk/GPath/blob/main/gpath'
 parallel_show_output = true
 
-[testenv:config]
-description = Check package config
+[testenv:metadata]
+description = Check package metadata
 depends = awaitpy
 base = task
-tox_extras = config
+tox_extras = metadata
 commands = pyroma .
 parallel_show_output = true
 
