--- a/tox.ini
+++ b/tox.ini
@@ -72,7 +72,10 @@ description = Generate documentation
 depends = awaitpy
 base = task
 tox_extras = docs
+allowlist_externals = rm, find
+commands_pre = rm -rf docs/html/
 commands = pdoc src/gpath -o docs/html -t docs/templates --favicon favicon.png --edit-url gpath='https://github.com/yushiyangk/GPath/blob/main/src/gpath/'
+commands_post = find docs/html -type d -exec cp docs/templates/favicon.png "{}" ";"
 parallel_show_output = true
 
 [testenv:metadata]
@@ -108,7 +111,7 @@ parallel_show_output = true
 description = Remove all artefacts
 base = task
 allowlist_externals = rm
-commands = rm -rf .coverage htmlcov/ build/ dist/ generic_path.egg-info/
+commands = rm -rf .coverage htmlcov/ build/ dist/ docs/html/ generic_path.egg-info/
 
 [testenv:testpublish-noparallel]
 description = Publish package to TestPyPI (WARNING: this can only be done once without changing the version number)
