Upgrade packages `build`, `tox-extras`, `twine`
Also deleted pinned dependency versions since they are only used for the dev environment and not used for deployment.

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 min_version = 3.4
-requires = tox-extras ~= 0.0.1
+requires = tox-extras == 0.0.2
 # `tox_extras =` will install dependencies without the main package based on extras defined in pyproject.toml
 suicide_timeout = 0.1
 interrupt_timeout = 0.4
